[gd_scene load_steps=8 format=3 uid="uid://cxp7fgws4fvww"]

[ext_resource type="Texture2D" uid="uid://dfe3t4oaypw1h" path="res://sprites/enemy.svg" id="1_rd34c"]
[ext_resource type="Script" uid="uid://uam0ka42y2px" path="res://scripts/enemy.gd" id="2_6inyk"]
[ext_resource type="Texture2D" uid="uid://b4g6yyppurlir" path="res://sprites/enemy_broken_left.svg" id="3_yrns4"]
[ext_resource type="Texture2D" uid="uid://ykup2rt0hsay" path="res://sprites/enemy_broken_right.svg" id="4_2onfl"]
[ext_resource type="AudioStream" uid="uid://dpbpgvx4abh37" path="res://sounds/hit.wav" id="5_8jfay"]
[ext_resource type="AudioStream" uid="uid://ceim7hpvo1lxr" path="res://sounds/explode.wav" id="6_sasq3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmw0l"]
size = Vector2(512, 512)

[node name="Enemy" type="Sprite2D"]
position = Vector2(360, 0)
texture = ExtResource("1_rd34c")
offset = Vector2(0, 256)
script = ExtResource("2_6inyk")

[node name="LeftWing" type="Sprite2D" parent="."]
position = Vector2(-288, 512)
texture = ExtResource("3_yrns4")
centered = false
offset = Vector2(0, -512)

[node name="RightWing" type="Sprite2D" parent="."]
position = Vector2(288, 512)
texture = ExtResource("4_2onfl")
centered = false
offset = Vector2(-512, -512)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 256)
shape = SubResource("RectangleShape2D_cmw0l")

[node name="HitSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8jfay")

[node name="ExplodeSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_sasq3")

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 0.75

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_entered"]
